add padding to profile image and replace favicon

--- a/assets/css/risen.css
+++ b/assets/css/risen.css
@@ -13738,7 +13738,8 @@ small, .small {
     letter-spacing: .5rem;
     font-size: 1.5rem;
     color: #fff;
-    font-weight: 900
+    font-weight: 900;
+    padding: 0px 5px;
 }
 
 .resume-role-title {
